# qlite

./: .gitignore  ANNOUNCEMENT  ANNOUNCEMENT.md  CLI.py  CONTRIBUTING.md  FUNDING.md  LICENSE  LICENSE.md  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CITATION.cff  FUNDING.yml  publish.yml  snake.yml  test.yml  tests.yml  workflows.yml
core/: AST_Node.py  Base_Gates.py  ascii_plotter.py  decomposer.py  grover.py  lexer.py  library.py  main.py  multiqubit_interpreter.py  parser.py  qll.ebnf  simulator.py  test_quantum.py  transpiler.py
examples/: bell_state.qlite  grover_search.qlite  qft_3qubit.qlite
tests/: test_parser.py  test_simulator.py
